install `react-i18n-editor`

--- a/src/app/assets/scss/_colors.scss
+++ b/src/app/assets/scss/_colors.scss
@@ -23,3 +23,25 @@ $color-red: #FF3434;
 $color-blue: #4eb4f9;
 $color-green: #4DF971;
 $color-violet: #6610EB;
+
+$color-primary-text: #9cdcfe;
+
+/* Font Sizes */
+$font-size-h1: 1.5rem;
+$font-size-h2: 1.25rem;
+$font-size-h3: 1rem;
+$font-size-h4: 0.875rem;
+$font-size-h5: 0.75rem;
+$font-size-text: 1rem;
+
+$color-white: #FFFFFF;
+$color-dark: #1A1A1A;
+
+$color-gray: #CACACA;
+$color-gray-dark: #8B8B8B;
+$color-gray-light: #F0F2F8;
+
+$color-blue: #0054da;
+$color-red: #D62D30;
+
+$color-primary-text: #9cdcfe;
